<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_statistics"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart_statistics_categories"
            android:layout_width="match_parent"
            android:layout_height="320dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Total Expenses"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_statistics_total_expenses"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    tools:text="3,000,000"
                    android:gravity="center"
                    app:autoSizeMinTextSize="20sp"
                    app:autoSizeMaxTextSize="56sp"
                    app:autoSizeTextType="uniform"
                    android:textAlignment="center"
                    android:layout_marginHorizontal="8dp"
                    android:textColor="@color/red_600"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total Income"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_statistics_total_income"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            tools:text="30"
            android:gravity="center"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="20sp"
            app:autoSizeMaxTextSize="56sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/green_600"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_statistics_total_difference"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            tools:text="2,999,970"
            tools:visibility="gone"
            android:gravity="center"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="16sp"
            app:autoSizeMaxTextSize="32sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/red_600"/>
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart_statistics_total"
            android:layout_width="match_parent"
            android:layout_height="320dp"/>
    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/text_view_statistics_transaction_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2 transactions"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
        <TextView
            android:id="@+id/text_view_statistics_item_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5 items"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

        <Button
            android:id="@+id/image_view_statistics_view_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="View Items"
            app:icon="@drawable/baseline_list_24"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"/>
    </LinearLayout>
    <TextView
        android:id="@+id/text_view_statistics_date_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Sunday 10th January 2025 - Present"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <Button
            android:id="@+id/image_button_statistics_cycle_mode_left"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:icon="@drawable/baseline_keyboard_arrow_left_24"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"/>
        <Space
            android:layout_width="8dp"
            android:layout_height="0dp"/>
        <Spinner
            android:id="@+id/spinner_statistics_current_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Space
            android:layout_width="8dp"
            android:layout_height="0dp"/>
        <Button
            android:id="@+id/image_button_statistics_cycle_mode_right"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:icon="@drawable/baseline_keyboard_arrow_right_24"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"/>
        <Space
            android:layout_width="8dp"
            android:layout_height="0dp"/>
        <Button
            android:id="@+id/image_view_statistics_configure_current_mode"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="Configure"
            app:icon="@drawable/baseline_settings_24"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"/>
        <Space
            android:layout_width="8dp"
            android:layout_height="0dp"/>
        <Button
            android:id="@+id/image_view_statistics_open_filter"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="Filter"
            app:icon="@drawable/baseline_filter_list_24"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"/>
    </LinearLayout>
</LinearLayout>