...
        android:id="@+id/view_pager_statistics_filter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_statistics_filter_selection_section"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_statistics_filter_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"
...
